# SDL_d3drm

./: CMakeLists.txt
.github/workflows/: main.yml
examples/convxfmt/: CMakeLists.txt  convxfmt.c
examples/rmbegin1/: CMakeLists.txt  rmbegin1.c
include/: SDL_d3d.h  SDL_d3dcaps.h  SDL_d3drm.h  SDL_d3drmdef.h  SDL_d3drmobj.h  SDL_d3drmwin.h  SDL_d3dtypes.h  SDL_ddraw.h  SDL_dxfile.h  SDL_rmxfguid.h  SDL_rmxftmpl.h  SDL_winglue.h
src/common/: common_forward.h  common_logging.h
src/d3drm/: d3drm.mingw.def  d3drm.msvc.def  d3drm.sym  forward.c  idirect3drm.c  idirect3drm.h  idirect3drmanimation.h  idirect3drmanimationset.h  idirect3drmdevice.h  idirect3drmface.h  idirect3drmframe.h  idirect3drmmaterial.h  idirect3drmmeshbuilder.h  idirect3drmtexture.h  idirect3drmviewport.h  library.c  library.h  math.c
src/d3drm/test/: test.c
src/d3dxof/: d3dxof.mingw.def  d3dxof.msvc.def  d3dxof.sym  forward.c  idirectxfile.c  idirectxfile.h
